# greptimedb-mcp-server

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements-dev.txt  server.json
.github/workflows/: publish.yml  python-app.yml
docs/: llm-instructions.md
src/greptimedb_mcp_server/: __init__.py  config.py  formatter.py  server.py  utils.py
src/greptimedb_mcp_server/templates/iot_monitoring/: template.md
src/greptimedb_mcp_server/templates/log_pipeline/: template.md
src/greptimedb_mcp_server/templates/metrics_analysis/: template.md
src/greptimedb_mcp_server/templates/pipeline_creator/: template.md
src/greptimedb_mcp_server/templates/promql_analysis/: config.yaml  template.md
src/greptimedb_mcp_server/templates/table_operation/: template.md
src/greptimedb_mcp_server/templates/trace_analysis/: template.md
templates/metrics_analysis/: config.yaml  template.md
templates/table_operation/: template.md
tests/: test_config.py  test_http_transport.py  test_masking.py  test_server.py  test_utils.py
